IngressAndRestrictionPod/RestrictPod/NetworkPolicy1/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels: 
    depi: MyApp
spec:
  containers:
  - name: pod1
    image: nginx
    ports:
    - containerPort: 80
