IngressAndRestrictionPod/RestrictPod/NetworkPolicy1/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels: 
    depi: MyApp
spec:
  containers:
  - name: pod2
    image: nginx
    ports:
    - containerPort: 80
