IngressAndRestrictionPod/RestrictPod/NetworkPolicy1/NetworkPolicy.yaml
# 1. Default Deny All Traffic
# Definition: Denies all traffic to and from pods by default. 
# You must explicitly allow traffic using other NetworkPolicies.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
spec:
  podSelector: {} # Selects all Pods
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []

# support Networkpolicy -- > cilium
# minikube start --cni=cilium , calico
